--- a/app/src/main/res/layout/fragment_shouye.xml
+++ b/app/src/main/res/layout/fragment_shouye.xml
@@ -3,12 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragement.msgFragment">
+    tools:context=".fragement.shouye"
+
+    android:background="@color/cardview_light_background">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="47dp"
-        android:layout_marginTop="260dp"
-        android:text="youxiangxinxi" />
+        android:layout_height="match_parent"
+        android:text="欢迎到广场！"
+        android:gravity="center"
+        android:textSize="30dp"
+        android:layout_centerHorizontal="true"
+        />
 
 </FrameLayout>
