--- a/app/src/main/res/layout/activity_open.xml
+++ b/app/src/main/res/layout/activity_open.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#817fc8"
+
     tools:context=".Open">
 
     <ImageView
@@ -29,6 +29,7 @@
         android:text="@string/app_name"
         android:textColor="@color/highlight"
         android:textSize="30dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +42,7 @@
         android:layout_marginTop="600dp"
         android:layout_marginBottom="112dp"
         android:text="@string/author"
-        android:textColor="@color/chose"
+        android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
