--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -10,10 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="27dp"
         android:layout_marginTop="270dp"
-        android:text="添加"
-
-       />
-
-
+        android:gravity="center"
+        android:text="添加" />
 
 </FrameLayout>
