--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,13 @@
         <item name="android:backgroundDimEnabled">true</item>
     </style>
 
+    <style name="CustomSeekbarStyle" >
+        <item name="android:maxHeight">5dp</item>
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:indeterminateDrawable">@color/colorAccent</item>
+        <item name="android:progressDrawable">@drawable/seekbar_progress_drawable</item>
+        <item name="android:minHeight">5dp</item>
+        <item name="android:thumb">@mipmap/thumb</item>
+    </style>
+
 </resources>
